src/static/scss/components/_photos.scss
@use '../mixins' as mixins;

/* Resize Images to W: 350, H: 560 */

:root {
  --photos-image-tile-width: 250px;
}

.photos-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(var(--photos-image-tile-width), 1fr));
  grid-auto-rows: var(--photos-image-tile-width);
}

@media screen and (max-width: 599px) {
  .photos-grid {
    display: flex;
    flex-direction: column;
  }
}

.photo-item {
  box-shadow: var(--default-shadow);
  cursor: zoom-in;
  border-radius: var(--border-radius);

  img {
    min-height: var(--photos-image-tile-width);
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: var(--border-radius);
  }

  &.tall {
    grid-row: auto / span 2;
  }

  &.wide {
    grid-column: auto / span 2;
  }

  &.both {
    grid-column: auto / span 2;
    grid-row: auto / span 2;
  }
}

#lightbox {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 100%;
  max-height: 100%;
  background-color: rgba(var(--color-black), 0.75);
  backdrop-filter: blur(8px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  visibility: hidden;
  z-index: 10000;

  &.open {
    visibility: visible;
  }

  #lightbox-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1em;
  }

  #lightbox-image-area {
    img {
      width: 100%;
      height: auto;
      max-height: 75vh;
      max-width: 100vw;
    }
  }

  #lightbox-caption {
    color: rgb(var(--color-white));
    text-align: center;
    margin-top: 1em;
  }

  #lightbox-metadata {
    display: flex;
    align-items: center;
    gap: 1em;
    flex-wrap: wrap;
    color: rgba(var(--color-white), 0.6);

    .metadata-item {
      margin-top: 0.5em;
    }
  }

  #lightbox-close {
    position: absolute;
    top: 0;
    right: 0;
    margin-top: 1em;
    margin-right: 1em;
    z-index: 2000;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border: none;
    background-color: transparent;
    color: rgb(var(--color-white));
    cursor: pointer;
    padding: 0.5em;
    border-radius: 50%;
    height: 48px;
    width: 48px;
    transition: background-color 250ms ease-in-out;

    svg {
      height: 24px;
      width: 24px;
    }

    &:hover,
    &:focus-within {
      background-color: var(--color-highlight);
    }
  }
}

